[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epstein-universal-unredaction"
version = "0.1.0"
description = "Unredaction pipeline: reverse-engineer black-box PDF redactions via spatial and typographic analysis."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "epstein-universal-unredaction contributors" }]
keywords = ["pdf", "redaction", "unredaction", "typographic-analysis", "forensics"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "pymupdf>=1.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
bench = [
    "pytest-benchmark>=4.0",
]

[project.scripts]
epstein-universal-unredaction = "epstein_universal_unredaction.cli:main"

[project.urls]
Repository = "https://github.com/epstein-universal-unredaction/epstein-universal-unredaction"
Issues = "https://github.com/epstein-universal-unredaction/epstein-universal-unredaction/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/epstein_universal_unredaction"]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks benchmark tests",
]
